need links controller users working well

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,7 @@
 <h2>Users bro.</h2>
 
-<%= render 'form' %>
+<% @users.each do |user| %>
+<%= link_to user.username, user %>
+<% end %>
 
-<%= link_to %>
+
