--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,25 @@
 </head>
 <body>
 <h1>Red.t</h1>
+
+<nav>
+  <% if current_user %>
+    <%= link_to current_user.username, user_path(current_user) %>
+    <%= link_to "Logout", logout_path %>
+  <% else %>
+    <%= link_to "Sign Up", new_user_path %>
+    <%= link_to "Login", login_path %>
+  <% end %>
+
+  <% if current_user %>
+    <%= link_to "My Links", user_links_path(current_user.id) %>
+  <% end %>
+</nav>
+
+<div class="">
+
+
+
 <%= yield %>
 
 </body>
