--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -14,8 +14,8 @@
       <%= f.password_field :password %>
     </div>
     <div class="field">
-      <%= f.label :password_confiramtion %>
-      <%= f.password_field :password_confiramtion %>
+      <%= f.label :password_confirmation %>
+      <%= f.password_field :password_confirmation %>
   </div>
   <% end %>
   <div class="actions">
