--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-<h1>Red.t</h1>
+<h1><a href="<%= root_path %>">Red.t</a></h1>
 
 <nav>
   <% if current_user %>
@@ -19,8 +19,8 @@
   <% end %>
 
   <% if current_user %>
-    <%= link_to "My Links", user_links_path(current_user.id) %>
-    <%= link_to "Add link", new_user_link_path %>
+    <%= link_to "My Links", user_links_path(current_user) %>
+    <%= link_to "Add link", new_user_link_path(current_user) %>
   <% end %>
 </nav>
 
