--- a/app/views/links/_form.html.erb
+++ b/app/views/links/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@link) do |f| %>
+<%= form_for([@user,@link]) do |f| %>
 <div class="field">
 	<%= f.label :title %>
 	<%= f.text_field :title %>
